# claude-code-session-manager

./: CLAUDE.md  README.md  SPEC.md  TEST_PLAN.md  pyproject.toml
.claude/skills/textual-tui/: SKILL.md
.claude/skills/textual-tui/references/: api-patterns.md  events-messages.md  layout-css.md  widgets-reference.md
ccsm/: __init__.py  __main__.py
ccsm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ccsm/cli/: __init__.py  commands.py  formatters.py  tui.py
ccsm/core/: __init__.py  deleter.py  discovery.py  models.py
ccsm/utils/: __init__.py
